use predefined charset constant instead of its string representation